// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Snapshots renders default progress bar correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with animated variant correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600  bg-stripes animate-progress-stripes  h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with custom className correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full custom-progress"
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with custom label correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with custom label format correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex justify-between mb-1 text-xs font-medium"
    >
      <span>
        50 / 100
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different colors correctly: ProgressBar with color error 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-red-500 dark:bg-red-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different colors correctly: ProgressBar with color info 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-blue-500 dark:bg-blue-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different colors correctly: ProgressBar with color primary 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different colors correctly: ProgressBar with color secondary 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-secondary-500 dark:bg-secondary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different colors correctly: ProgressBar with color success 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-green-500 dark:bg-green-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different colors correctly: ProgressBar with color warning 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-yellow-500 dark:bg-yellow-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different sizes correctly: ProgressBar with size lg 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-6 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different sizes correctly: ProgressBar with size md 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different sizes correctly: ProgressBar with size sm 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-2 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with different sizes correctly: ProgressBar with size xs 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-1 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with gradient appearance correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600 bg-gradient-to-r from-primary-400 to-primary-600   h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with indeterminate state correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600   animate-progress-indeterminate h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with inverted progress correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%; margin-left: auto;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with label correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex justify-between mb-1 text-xs font-medium"
    >
      <span>
        50%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with rounded corners correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600    h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar Snapshots renders with striped variant correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full overflow-hidden bg-gray-200 dark:bg-gray-700 h-4 rounded-full "
      data-testid="progressbar"
      role="progressbar"
    >
      <div
        class="bg-primary-500 dark:bg-primary-600  bg-stripes  h-full transition-all duration-300 ease-in-out"
        data-testid="progress-fill"
        style="width: 50%;"
      />
    </div>
    <style>
      
        .bg-stripes {
          background-image: linear-gradient(
            45deg,
            rgba(255, 255, 255, 0.15) 25%,
            transparent 25%,
            transparent 50%,
            rgba(255, 255, 255, 0.15) 50%,
            rgba(255, 255, 255, 0.15) 75%,
            transparent 75%,
            transparent
          );
          background-size: 1rem 1rem;
        }
        
        @keyframes progress-stripes {
          0% { background-position: 1rem 0; }
          100% { background-position: 0 0; }
        }
        
        .animate-progress-stripes {
          animation: progress-stripes 1s linear infinite;
        }
        
        @keyframes progress-indeterminate {
          0% { left: -50%; }
          100% { left: 100%; }
        }
        
        .animate-progress-indeterminate {
          position: relative;
          animation: progress-indeterminate 1.5s ease infinite;
        }
      
    </style>
  </div>
</DocumentFragment>
`;
